# reviewer2

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
src/reviewer2/: __init__.py  cli.py  core.py  helpers.py  mathpix.py  paths.py  pipeline.py  render_text.py  stages.py
src/reviewer2/data/: pricing.csv
src/reviewer2/prompts/: 00a_metadata.txt  00b_metadata_clean.txt  00c_contributions.txt  01a_breaker.txt  01b_butcher.txt  01c_shredder.txt  01d_collector.txt  01e_math.txt  01fa_math_check.txt  01fb_math_proofread.txt  01fc_math_audit.txt  01fd_math_sober.txt  01g_the_void.txt  01i_code_gonzo.txt  01j_code_gonzo_b.txt  01k_code_gonzo_c.txt  01l_code_compiler.txt  01m_code_checker.txt  01n_code_list.txt  01o_summarizer.txt  02a_numbers.txt  02b_compiler_1.txt  02c_blue_team.txt  02d_compiler_2.txt  02e_assessment.txt  02f_compiler_3.txt  02g_list_v1.txt  03a_checker_1.txt  03b_external.txt  03c_list_v2.txt  04a_reviewer.txt  04b_data_editor.txt  05a_checker_2.txt  05b_checker_3.txt  05c_reviser.txt  06_legal.txt  07_formatter.txt  08a_alchemist.txt  08b_polisher.txt  09a_proofreader.txt  (+5 more)
src/reviewer2/prompts/resources/: output_format.txt
